Make Click() work on image inputs.  Bug 96595, patch by basic@mozillanews.org, r=bzbarsky, sr=jst